# AttysComm

./: AttysComm.h  AttysScan.cpp  README  README.md  local.properties
app/: build.gradle
app/src/androidTest/java/tech/glasgowneuro/attyscomm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/tech/glasgowneuro/attyscomm/: AttysComm.java  AttysService.java
app/src/main/res/values/: strings.xml
app/src/test/java/tech/glasgowneuro/attyscomm/: ExampleUnitTest.java
c/: AttysComm.h  AttysScan.h
cpp/: AttysComm.cpp  AttysComm.h  AttysComm.mm  AttysCommBase.cpp  AttysCommBase.h  AttysScan.cpp  AttysScan.h  AttysScan.mm  CMakeLists.txt  MANIFEST.in  README  README_py  __init__.py  pyattyscomm.i  readdata_demo.py  realtime_plot_demo.py  setup.py
cpp/attyscomm/: AttysThread.h  base64.h
cpp/demo/: README  readdata_from_attys.py  realtime_plot.py
cpp/test/: CMakeLists.txt
demo/: realtime_plot.py
examples/: readdata_from_attys.py  realtime_two_channel_plot.py
